Nav changes added Education

--- a/index.html
+++ b/index.html
@@ -16,29 +16,30 @@
                     <input type="checkbox" id="sidebar-active">
                     <label for="sidebar-active" class="open-sidebar-button"><img id="menu_icon" src="images/menu.svg" alt="Menu Icon" width="24px" height="24px" /></label>
                     <label id="overlay" for="sidebar-active"></label>
-                <ul class="nav-links">
-                    <label for="sidebar-active" class="close-sidebar-button"><img id="close_icon" src="images/close.svg" alt="Close Icon" width="24px" height="24px" /></label>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#technical-skills">Skills</a></li>
-                    <li><a href="#experience">Experience</a></li>
-                    <li><a href="project.html">Projects</a></li>
-                </ul>
-                </h1>
-                <div class="social-icons">
-                    <div class="social-icons-image" data-name="Github Link 👨‍💻">
-                        <a href="https://github.com/jagtapshashank" target="_blank">
-                        <img src="images/githubdark.svg" alt="GitHub" class="icon">
-                        </a>
+                    <ul class="nav-links">
+                        <label for="sidebar-active" class="close-sidebar-button"><img id="close_icon" src="images/close.svg" alt="Close Icon" width="24px" height="24px" /></label>
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#technical-skills">Skills</a></li>
+                        <li><a href="#experience">Experience</a></li>
+                        <li><a href="#education">Education</a></li>
+                        <li><a href="project.html">Projects</a></li>
+                    </ul>
+                    </h1>
+                    <div class="social-icons">
+                        <div class="social-icons-image" data-name="Github Link 👨‍💻">
+                            <a href="https://github.com/jagtapshashank" target="_blank">
+                            <img src="images/githubdark.svg" alt="GitHub" class="icon">
+                            </a>
+                        </div>
+                        <div class="social-icons-image" data-name="My LinkedIn 💻">
+                            <a href="https://www.linkedin.com/in/shashankjagtap/" target="_blank">
+                            <img src="images/linkedindark.svg" alt="LinkedIn" class="icon">
+                            </a>
+                        </div>
+                        <div class="social-icons-image" data-name="Switch Theme 💡">
+                        <img src="images/moon.svg" class="icon" id="icon_theme" alt="Theme toggle">
+                        </div>
                     </div>
-                    <div class="social-icons-image" data-name="My LinkedIn 💻">
-                        <a href="https://www.linkedin.com/in/shashankjagtap/" target="_blank">
-                        <img src="images/linkedindark.svg" alt="LinkedIn" class="icon">
-                        </a>
-                    </div>
-                    <div class="social-icons-image" data-name="Switch Theme 💡">
-                    <img src="images/moon.svg" class="icon" id="icon_theme" alt="Theme toggle">
-                    </div>
-                </div>
                 </nav>
         </header>
         
@@ -68,10 +69,11 @@
                       I am currently a Research Assistant at <a href="https://www.tamu.edu" target="_blank">Texas A&M University
                       </a>, pursuing my Master of Science in Computer Science. With a strong foundation in machine learning, software development, and data analytics, I have honed my skills through academic research, industry internships, and hands-on projects. 
                       <br><br>
-                      I specialize in NLP, image classification, and data science workflows, focusing on scalable data pipelines and actionable visualizations. I had the privilege of collaborating with
-                      <a href="https://scholar.google.com/citations?user=eX4rjeQAAAAJ&hl=en" target="_blank">Dr. Arun Sen</a> and 
-                      <a href="https://mays.tamu.edu/directory/buffy-mosley/" target="_blank">Dr. Buffy Mosley</a> on projects that advanced image classification techniques using deep neural networks (DNN). Currently, I am working with
-                      <a href="https://scholar.google.com/citations?user=laqfZ-4AAAAJ&hl=en" target="_blank">Dr. Chia-Che Tsai</a> on my thesis, which explores privacy security solutions from temperature sensing devices. My experience as an ML-Android app developer at RIA Advisory further strengthened my skills across front-end, back-end, and machine learning frameworks, preparing me to tackle complex challenges effectively.
+                      I specialize in NLP, image classification, and data science workflows, with a focus on scalable data pipelines and actionable visualizations. I've collaborated with
+                      <a href="https://mays.tamu.edu/directory/buffy-mosley/" target="_blank">Dr. Buffy Mosley</a> on advancing image classification with deep neural networks and am currently working with 
+                      <a href="https://scholar.google.com/citations?user=eX4rjeQAAAAJ&hl=en" target="_blank">Dr. Arun Sen</a> to transform ACO, MUP, and QPP healthcare data, generating insights that enhance prescriptive healthcare strategies. In parallel, I am completing my thesis under 
+                      <a href="https://scholar.google.com/citations?user=laqfZ-4AAAAJ&hl=en" target="_blank">Dr. Chia-Che Tsai</a> , exploring privacy security solutions from temperature sensing devices. My role as an ML-Android app developer at 
+                      <a href="https://riaadvisory.com/" target="_blank">RIA Advisory</a> strengthened my expertise across front-end, back-end, and machine learning frameworks, preparing me for complex challenges.
                       <br><br>
                       I quickly adapt to new technologies and trends, collaborating effectively across teams. Driven by a passion for problem-solving, I seek challenges and continuous learning opportunities.
                     </p>
@@ -277,41 +279,6 @@
             </section>
             <br>
             <hr>
-
-            <!-- Education Section -->
-            <!-- <section id="education" class="education">
-                <h2><span class="heading-content">Education 📚</span></h2>
-                <div class="education-item">
-                    <img src="images/education/t.jpg" alt="Texas A&M University Logo" class="school-logo">
-                    <div class="school-info">
-                        <div class="school-name">
-                            <p data-small="TAMU" data-full="Texas A&M University">Texas A&M University</p>
-                        </div>
-                        <div class="school-major">
-                            <a href="https://engineering.tamu.edu/cse/academics/degrees/graduate/ms-cs.html" target="_blank" data-small="MSCS" data-full="Masters of Science in Computer Science">Masters of Science in Computer Science</a>
-                        </div>
-                    </div>
-                    <div class="graduation-year">
-                        <p>2023 - 2025</p><br>
-                    </div>
-                </div>
-
-                <div class="education-item">
-                    <img src="images/education/sppu.png" alt="Savitribai Phule Pune University Logo" class="school-logo">
-                    <div class="school-info">
-                        <div class="school-name">
-                            <p data-small="SPPU" data-full="Savitribai Phule Pune University">Savitribai Phule Pune University</p>
-                        </div>
-                        <div class="school-major">
-                            <a href="http://www.unipune.ac.in/dept/science/computer_science/default.htm" target="_blank" data-small="B.E. Comp Eng" data-full="Bachelors of Engineering (Computer Engineering)">Bachelors of Engineering (Computer Engineering)</a>
-                        </div>
-                    </div>
-                    <div class="graduation-year">
-                        <p>2019 - 2023</p><br>
-                    </div>
-                </div>
-            
-            </section> -->
 
             <section id="education" class="education">
                 <h2><span class="heading-content">Education 📚</span></h2>
