--- a/project.html
+++ b/project.html
@@ -21,6 +21,7 @@
                     <li><a href="index.html#home">Home</a></li>
                     <li><a href="index.html#technical-skills">Skills</a></li>
                     <li><a href="index.html#experience">Experience</a></li>
+                    <li><a href="index.html#education">Education</a></li>
                     <li><a href="#project">Projects</a></li>
                 </ul>
                 </h1>
